[workspace]
members = [ "programs/*" ]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
# agave-feature-set = { version = "3.0.10" }
# solana-svm-feature-set = { version = "3.0.10" }
