[package]
name = "kickstarter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kickstarter"


[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []


[dependencies]
anchor-lang = { version = "=0.32.1", features = ["init-if-needed", "event-cpi"] }
anchor-spl = { version = "=0.32.1", features = ["metadata"] }
ephemeral-rollups-sdk = { version = "0.8.0", features = ["anchor", "access-control"] }
borsh = "0.10.4"
light-sdk = { version = "0.18.0", features = ["anchor", "anchor-discriminator", "cpi-context"] }
mpl = "0.2.0"
mpl-token-metadata = "5.1.0"
serde_json = "1.0.145"
sha2 = "0.10"

[dev-dependencies]
solana-account = "=3.2.0"
solana-instruction = "=3.1.0"
solana-keypair = "=3.1.0"
solana-message = "=3.0.1"
solana-pubkey = "=3.0.0"
solana-signer = "=3.0.0"
solana-transaction = "=3.0.2"
solana-program-runtime = "=3.0.10"
litesvm = "0.8.1"
light-client = "0.18.0"
light-program-test = "0.18.0"
tokio = "1.43.0"
solana-sdk = "2.2"
spl-token = { version = "=4.0.1", features = ["no-entrypoint"] }
litesvm-token = "0.8.1"